--- a/benchmarks/RemoteBenchmarkWireSerializer/Messages/Messages.csproj
+++ b/benchmarks/RemoteBenchmarkWireSerializer/Messages/Messages.csproj
@@ -3,6 +3,6 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Proto.Actor" Version="0.2.1-alpha.0.26" />
+    <PackageReference Include="Proto.Actor" Version="0.3.0" />
   </ItemGroup>
 </Project>
