--- a/examples/clustering/ClusterHelloWorld/Messages/Messages.csproj
+++ b/examples/clustering/ClusterHelloWorld/Messages/Messages.csproj
@@ -3,10 +3,9 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Google.Protobuf" Version="3.11.4" />
     <PackageReference Include="System.ValueTuple" Version="4.5.0" />
     <PackageReference Include="Grpc.Tools" Version="2.23.0" PrivateAssets="All" />
-    <PackageReference Include="Proto.Actor" Version="0.2.1-alpha.0.26" />
+    <PackageReference Include="Proto.Actor" Version="0.3.0" />
   </ItemGroup>
   <ItemGroup>
     <Protobuf Include="Protos.proto" GrpcServices="Client,Server" />
