--- a/src/diagnostics/Proto.OpenTracing/Proto.OpenTracing.csproj
+++ b/src/diagnostics/Proto.OpenTracing/Proto.OpenTracing.csproj
@@ -4,6 +4,6 @@
     </PropertyGroup>
     <ItemGroup>
         <PackageReference Include="OpenTracing" Version="0.12.0" />
-        <PackageReference Include="Proto.Actor" Version="0.2.1-alpha.0.26" />
+        <PackageReference Include="Proto.Actor" Version="0.3.0" />
     </ItemGroup>
 </Project>
