--- a/src/extensions/Proto.Actor.Extensions/Proto.Actor.Extensions.csproj
+++ b/src/extensions/Proto.Actor.Extensions/Proto.Actor.Extensions.csproj
@@ -4,7 +4,7 @@
     <RootNamespace>Proto</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Proto.Actor" Version="0.2.1-alpha.0.26" />
+    <PackageReference Include="Proto.Actor" Version="0.3.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="2.2.0" />
   </ItemGroup>
 </Project>
