--- a/src/persistence/Proto.Persistence.Marten/Proto.Persistence.Marten.csproj
+++ b/src/persistence/Proto.Persistence.Marten/Proto.Persistence.Marten.csproj
@@ -4,6 +4,6 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Marten" Version="3.11.0" />
-    <PackageReference Include="Proto.Persistence" Version="0.2.1-alpha.0.26" />
+    <PackageReference Include="Proto.Persistence" Version="0.3.0" />
   </ItemGroup>
 </Project>
