--- a/src/persistence/Proto.Persistence.MongoDB/Proto.Persistence.MongoDB.csproj
+++ b/src/persistence/Proto.Persistence.MongoDB/Proto.Persistence.MongoDB.csproj
@@ -4,6 +4,6 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="MongoDB.Driver" Version="2.10.2" />
-    <PackageReference Include="Proto.Persistence" Version="0.2.1-alpha.0.26" />
+    <PackageReference Include="Proto.Persistence" Version="0.3.0" />
   </ItemGroup>
 </Project>
