--- a/src/persistence/Proto.Persistence.SqlServer/Proto.Persistence.SqlServer.csproj
+++ b/src/persistence/Proto.Persistence.SqlServer/Proto.Persistence.SqlServer.csproj
@@ -5,6 +5,6 @@
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.1" />
-    <PackageReference Include="Proto.Persistence" Version="0.2.1-alpha.0.26" />
+    <PackageReference Include="Proto.Persistence" Version="0.3.0" />
   </ItemGroup>
 </Project>
