--- a/src/serialization/Proto.Serialization.Wire/Proto.Serialization.Wire.csproj
+++ b/src/serialization/Proto.Serialization.Wire/Proto.Serialization.Wire.csproj
@@ -3,7 +3,7 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Proto.Remote" Version="0.2.1-alpha.0.26" />
+    <PackageReference Include="Proto.Remote" Version="0.3.0" />
     <PackageReference Include="Wire" Version="0.8.2" />
   </ItemGroup>
 </Project>
