--- a/benchmarks/RemoteBenchmarkWireSerializer/Node1/Node1.csproj
+++ b/benchmarks/RemoteBenchmarkWireSerializer/Node1/Node1.csproj
@@ -6,7 +6,7 @@
     <ConcurrentGarbageCollection>true</ConcurrentGarbageCollection>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Proto.Remote" Version="0.3.0" />
+    <PackageReference Include="Proto.Remote" Version="0.3.1-alpha.0.89" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\src\serialization\Proto.Serialization.Wire\Proto.Serialization.Wire.csproj" />
