--- a/examples/Persistence/Persistence/Persistence.csproj
+++ b/examples/Persistence/Persistence/Persistence.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Proto.Actor" Version="0.3.0" />
+    <PackageReference Include="Proto.Actor" Version="0.3.1-alpha.0.89" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\src\persistence\Proto.Persistence.Sqlite\Proto.Persistence.Sqlite.csproj" />
