--- a/examples/clustering/ClusterGrainHelloWorld/Messages/Messages.csproj
+++ b/examples/clustering/ClusterGrainHelloWorld/Messages/Messages.csproj
@@ -3,9 +3,10 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Google.Protobuf" Version="3.13.0" />
     <PackageReference Include="System.ValueTuple" Version="4.5.0" />
-    <PackageReference Include="Grpc.Tools" Version="2.23.0" PrivateAssets="All" />
-    <PackageReference Include="Proto.Cluster" Version="0.3.0" />
+    <PackageReference Include="Grpc.Tools" Version="2.32.0" PrivateAssets="All" />
+    <PackageReference Include="Proto.Cluster" Version="0.3.1-alpha.0.89" />
   </ItemGroup>
   <ItemGroup>
     <Protobuf Include="Protos.proto" GrpcServices="Server" ProtoRoot=".; ..\..\..\src" />
