--- a/examples/clustering/ClusterGrainHelloWorld/Node1/Node1.csproj
+++ b/examples/clustering/ClusterGrainHelloWorld/Node1/Node1.csproj
@@ -6,10 +6,10 @@
     <ConcurrentGarbageCollection>true</ConcurrentGarbageCollection>
   </PropertyGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\..\src\clustering\Proto.Cluster.Consul\Proto.Cluster.Consul.csproj" />
     <ProjectReference Include="..\Messages\Messages.csproj" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Options" Version="2.2.0" />
+    <PackageReference Include="Proto.Cluster.Consul" Version="0.3.1-alpha.0.89" />
   </ItemGroup>
 </Project>
