--- a/examples/clustering/ClusterGrainHelloWorld/Node2/Node2.csproj
+++ b/examples/clustering/ClusterGrainHelloWorld/Node2/Node2.csproj
@@ -7,9 +7,9 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Options" Version="2.2.0" />
+    <PackageReference Include="Proto.Cluster.Consul" Version="0.3.1-alpha.0.89" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\..\src\clustering\Proto.Cluster.Consul\Proto.Cluster.Consul.csproj" />
     <ProjectReference Include="..\Messages\Messages.csproj" />
   </ItemGroup>
 </Project>
