--- a/examples/clustering/ClusterHelloWorld/Node1/Node1.csproj
+++ b/examples/clustering/ClusterHelloWorld/Node1/Node1.csproj
@@ -9,10 +9,10 @@
     <PackageReference Include="Microsoft.Extensions.Logging" Version="3.1.2" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="3.1.2" />
     <PackageReference Include="Microsoft.Extensions.Options" Version="3.1.2" />
+    <PackageReference Include="Proto.Cluster" Version="0.3.1-alpha.0.89" />
+    <PackageReference Include="Proto.Cluster.Consul" Version="0.3.1-alpha.0.89" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\..\src\clustering\Proto.Cluster.Consul\Proto.Cluster.Consul.csproj" />
-    <ProjectReference Include="..\..\..\..\src\clustering\Proto.Cluster.SingleRemoteInstance\Proto.Cluster.SingleRemoteInstance.csproj" />
     <ProjectReference Include="..\Messages\Messages.csproj" />
   </ItemGroup>
 </Project>
