--- a/examples/tracing/DrawNiceTrace/DrawNiceTrace.csproj
+++ b/examples/tracing/DrawNiceTrace/DrawNiceTrace.csproj
@@ -4,8 +4,9 @@
         <TargetFramework>netcoreapp3.1</TargetFramework>
     </PropertyGroup>
     <ItemGroup>
+        <PackageReference Include="Google.Protobuf" Version="3.13.0" />
         <PackageReference Include="Jaeger" Version="0.1.1" />
-        <PackageReference Include="Grpc.Tools" Version="2.23.0" PrivateAssets="All" />
+        <PackageReference Include="Grpc.Tools" Version="2.32.0" PrivateAssets="All" />
     </ItemGroup>
     <ItemGroup>
       <ProjectReference Include="..\..\..\src\diagnostics\Proto.OpenTracing\Proto.OpenTracing.csproj" />
