--- a/src/clustering/Proto.Cluster.Consul/Proto.Cluster.Consul.csproj
+++ b/src/clustering/Proto.Cluster.Consul/Proto.Cluster.Consul.csproj
@@ -5,6 +5,6 @@
   <ItemGroup>
     <PackageReference Include="Consul" Version="0.7.2.6" />
     <PackageReference Include="Microsoft.Extensions.Options" Version="2.2.0" />
-    <PackageReference Include="Proto.Cluster" Version="0.3.0" />
+    <PackageReference Include="Proto.Cluster" Version="0.3.1-alpha.0.89" />
   </ItemGroup>
 </Project>
