--- a/src/clustering/Proto.Cluster.SingleRemoteInstance/Proto.Cluster.SingleRemoteInstance.csproj
+++ b/src/clustering/Proto.Cluster.SingleRemoteInstance/Proto.Cluster.SingleRemoteInstance.csproj
@@ -1,10 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk" ToolsVersion="15.0">
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netstandard2.1</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Proto.Cluster" Version="0.3.0" />
-    <PackageReference Include="Grpc.Tools" Version="2.23.0" PrivateAssets="All" />
+    <PackageReference Include="Proto.Cluster" Version="0.3.1-alpha.0.89" />
+    <PackageReference Include="Grpc.Tools" Version="2.32.0" PrivateAssets="All" />
   </ItemGroup>
   <ItemGroup>
     <Protobuf Include="Protos.proto" GrpcServices="Server" />
