--- a/src/clustering/Proto.Cluster.WeightedMemberStrategy/Proto.Cluster.WeightedMemberStrategy.csproj
+++ b/src/clustering/Proto.Cluster.WeightedMemberStrategy/Proto.Cluster.WeightedMemberStrategy.csproj
@@ -5,6 +5,6 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Options" Version="2.2.0" />
-    <PackageReference Include="Proto.Cluster" Version="0.3.0" />
+    <PackageReference Include="Proto.Cluster" Version="0.3.1-alpha.0.89" />
   </ItemGroup>
 </Project>
