--- a/src/diagnostics/Proto.OpenTracing/Proto.OpenTracing.csproj
+++ b/src/diagnostics/Proto.OpenTracing/Proto.OpenTracing.csproj
@@ -3,7 +3,7 @@
         <TargetFramework>netstandard2.0</TargetFramework>
     </PropertyGroup>
     <ItemGroup>
-        <PackageReference Include="OpenTracing" Version="0.12.0" />
-        <PackageReference Include="Proto.Actor" Version="0.3.0" />
+        <PackageReference Include="OpenTracing" Version="0.12.1" />
+        <PackageReference Include="Proto.Actor" Version="0.3.1-alpha.0.89" />
     </ItemGroup>
 </Project>
