--- a/src/persistence/Proto.Persistence.Couchbase/Proto.Persistence.Couchbase.csproj
+++ b/src/persistence/Proto.Persistence.Couchbase/Proto.Persistence.Couchbase.csproj
@@ -4,6 +4,6 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="CouchbaseNetClient" Version="2.7.16" />
-    <PackageReference Include="Proto.Persistence" Version="0.3.0" />
+    <PackageReference Include="Proto.Persistence" Version="0.3.1-alpha.0.89" />
   </ItemGroup>
 </Project>
