--- a/src/persistence/Proto.Persistence.MongoDB/Proto.Persistence.MongoDB.csproj
+++ b/src/persistence/Proto.Persistence.MongoDB/Proto.Persistence.MongoDB.csproj
@@ -3,7 +3,7 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="MongoDB.Driver" Version="2.10.2" />
-    <PackageReference Include="Proto.Persistence" Version="0.3.0" />
+    <PackageReference Include="MongoDB.Driver" Version="2.11.2" />
+    <PackageReference Include="Proto.Persistence" Version="0.3.1-alpha.0.89" />
   </ItemGroup>
 </Project>
