--- a/src/scheduling/Proto.Scheduler.SimpleScheduler/Proto.Schedulers.SimpleScheduler.csproj
+++ b/src/scheduling/Proto.Scheduler.SimpleScheduler/Proto.Schedulers.SimpleScheduler.csproj
@@ -3,6 +3,6 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Proto.Actor" Version="0.3.0" />
+    <PackageReference Include="Proto.Actor" Version="0.3.1-alpha.0.89" />
   </ItemGroup>
 </Project>
