--- a/examples/Persistence/Messages/Messages.csproj
+++ b/examples/Persistence/Messages/Messages.csproj
@@ -4,7 +4,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Google.Protobuf" Version="3.13.0" />
-    <PackageReference Include="Proto.Actor" Version="0.3.1-alpha.0.89" />
+    <PackageReference Include="Proto.Actor" Version="0.9.0" />
     <PackageReference Include="System.ValueTuple" Version="4.5.0" />
     <PackageReference Include="Grpc.Tools" Version="2.32.0" PrivateAssets="All" />
   </ItemGroup>
