--- a/examples/clustering/ClusterGrainHelloWorld/Node2/Node2.csproj
+++ b/examples/clustering/ClusterGrainHelloWorld/Node2/Node2.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Options" Version="2.2.0" />
-    <PackageReference Include="Proto.Cluster.Consul" Version="0.3.1-alpha.0.89" />
+    <PackageReference Include="Proto.Cluster.Consul" Version="0.9.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Messages\Messages.csproj" />
