--- a/examples/clustering/ClusterHelloWorld/Node2/Node2.csproj
+++ b/examples/clustering/ClusterHelloWorld/Node2/Node2.csproj
@@ -9,7 +9,7 @@
     <PackageReference Include="Microsoft.Extensions.Logging" Version="3.1.2" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="3.1.2" />
     <PackageReference Include="Microsoft.Extensions.Options" Version="3.1.2" />
-    <PackageReference Include="Proto.Cluster.Consul" Version="0.3.1-alpha.0.89" />
+    <PackageReference Include="Proto.Cluster.Consul" Version="0.9.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Messages\Messages.csproj" />
