--- a/src/diagnostics/Proto.OpenTracing/Proto.OpenTracing.csproj
+++ b/src/diagnostics/Proto.OpenTracing/Proto.OpenTracing.csproj
@@ -4,6 +4,6 @@
     </PropertyGroup>
     <ItemGroup>
         <PackageReference Include="OpenTracing" Version="0.12.1" />
-        <PackageReference Include="Proto.Actor" Version="0.3.1-alpha.0.89" />
+        <PackageReference Include="Proto.Actor" Version="0.9.0" />
     </ItemGroup>
 </Project>
