--- a/src/persistence/Proto.Persistence.DynamoDB/Proto.Persistence.DynamoDB.csproj
+++ b/src/persistence/Proto.Persistence.DynamoDB/Proto.Persistence.DynamoDB.csproj
@@ -4,6 +4,6 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="AWSSDK.DynamoDBv2" Version="3.3.105.22" />
-    <PackageReference Include="Proto.Persistence" Version="0.3.1-alpha.0.89" />
+    <PackageReference Include="Proto.Persistence" Version="0.9.0" />
   </ItemGroup>
 </Project>
