--- a/src/persistence/Proto.Persistence.Sqlite/Proto.Persistence.Sqlite.csproj
+++ b/src/persistence/Proto.Persistence.Sqlite/Proto.Persistence.Sqlite.csproj
@@ -5,6 +5,6 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Data.Sqlite" Version="3.1.3" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
-    <PackageReference Include="Proto.Persistence" Version="0.3.1-alpha.0.89" />
+    <PackageReference Include="Proto.Persistence" Version="0.9.0" />
   </ItemGroup>
 </Project>
