--- a/benchmarks/RemoteBenchmarkWireSerializer/Messages/Messages.csproj
+++ b/benchmarks/RemoteBenchmarkWireSerializer/Messages/Messages.csproj
@@ -3,6 +3,6 @@
     <TargetFramework>netstandard2.1</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Proto.Actor" Version="0.9.0" />
+    <PackageReference Include="Proto.Actor" Version="0.9.1-alpha.0.71" />
   </ItemGroup>
 </Project>
