--- a/examples/clustering/ClusterGrainHelloWorld/Messages/Messages.csproj
+++ b/examples/clustering/ClusterGrainHelloWorld/Messages/Messages.csproj
@@ -1,12 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk" ToolsVersion="15.0">
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netstandard2.1</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Google.Protobuf" Version="3.13.0" />
+    <PackageReference Include="Google.Protobuf" Version="3.14.0" />
     <PackageReference Include="System.ValueTuple" Version="4.5.0" />
-    <PackageReference Include="Grpc.Tools" Version="2.32.0" PrivateAssets="All" />
-    <PackageReference Include="Proto.Cluster" Version="0.9.0" />
+    <PackageReference Include="Grpc.Tools" Version="2.34.0-pre1" PrivateAssets="All" />
+    <PackageReference Include="Proto.Cluster" Version="0.9.1-alpha.0.71" />
   </ItemGroup>
   <ItemGroup>
     <Protobuf Include="Protos.proto" GrpcServices="Server" ProtoRoot=".; ..\..\..\src" />
