--- a/examples/clustering/ClusterGrainHelloWorld/Node1/Node1.csproj
+++ b/examples/clustering/ClusterGrainHelloWorld/Node1/Node1.csproj
@@ -9,7 +9,8 @@
     <ProjectReference Include="..\Messages\Messages.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Options" Version="2.2.0" />
-    <PackageReference Include="Proto.Cluster.Consul" Version="0.9.0" />
+    <PackageReference Include="Microsoft.Extensions.Options" Version="5.0.0" />
+    <PackageReference Include="Proto.Cluster.Consul" Version="0.9.1-alpha.0.71" />
+    <PackageReference Include="Proto.Remote.GrpcCore" Version="0.9.1-alpha.0.71" />
   </ItemGroup>
 </Project>
