--- a/examples/clustering/ClusterHelloWorld/Node1/Node1.csproj
+++ b/examples/clustering/ClusterHelloWorld/Node1/Node1.csproj
@@ -6,11 +6,12 @@
     <ConcurrentGarbageCollection>true</ConcurrentGarbageCollection>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Logging" Version="3.1.2" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="3.1.2" />
-    <PackageReference Include="Microsoft.Extensions.Options" Version="3.1.2" />
-    <PackageReference Include="Proto.Cluster" Version="0.9.0" />
-    <PackageReference Include="Proto.Cluster.Consul" Version="0.9.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Options" Version="5.0.0" />
+    <PackageReference Include="Proto.Cluster" Version="0.9.1-alpha.0.71" />
+    <PackageReference Include="Proto.Cluster.Consul" Version="0.9.1-alpha.0.71" />
+    <PackageReference Include="Proto.Remote.GrpcCore" Version="0.9.1-alpha.0.71" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Messages\Messages.csproj" />
