--- a/src/extensions/Proto.Actor.Extensions/Proto.Actor.Extensions.csproj
+++ b/src/extensions/Proto.Actor.Extensions/Proto.Actor.Extensions.csproj
@@ -1,7 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netstandard2.1</TargetFramework>
     <RootNamespace>Proto</RootNamespace>
+    <LangVersion>9</LangVersion>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Proto.Actor" Version="0.9.0" />
