--- a/src/persistence/Proto.Persistence.DynamoDB/Proto.Persistence.DynamoDB.csproj
+++ b/src/persistence/Proto.Persistence.DynamoDB/Proto.Persistence.DynamoDB.csproj
@@ -1,9 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk" ToolsVersion="15.0">
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netstandard2.1</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="AWSSDK.DynamoDBv2" Version="3.3.105.22" />
-    <PackageReference Include="Proto.Persistence" Version="0.9.0" />
+    <PackageReference Include="AWSSDK.DynamoDBv2" Version="3.5.4.1" />
+    <PackageReference Include="Proto.Persistence" Version="0.9.1-alpha.0.71" />
   </ItemGroup>
 </Project>
