--- a/src/persistence/Proto.Persistence.MongoDB/Proto.Persistence.MongoDB.csproj
+++ b/src/persistence/Proto.Persistence.MongoDB/Proto.Persistence.MongoDB.csproj
@@ -1,9 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk" ToolsVersion="15.0">
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netstandard2.1</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="MongoDB.Driver" Version="2.11.2" />
-    <PackageReference Include="Proto.Persistence" Version="0.9.0" />
+    <PackageReference Include="MongoDB.Driver" Version="2.12.0-beta1" />
+    <PackageReference Include="Proto.Persistence" Version="0.9.1-alpha.0.71" />
   </ItemGroup>
 </Project>
