--- a/src/persistence/Proto.Persistence.SqlServer/Proto.Persistence.SqlServer.csproj
+++ b/src/persistence/Proto.Persistence.SqlServer/Proto.Persistence.SqlServer.csproj
@@ -1,10 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk" ToolsVersion="15.0">
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netstandard2.1</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.1" />
-    <PackageReference Include="Proto.Persistence" Version="0.9.0" />
+    <PackageReference Include="Proto.Persistence" Version="0.9.1-alpha.0.71" />
   </ItemGroup>
 </Project>
