--- a/src/scheduling/Proto.Scheduler.SimpleScheduler/Proto.Schedulers.SimpleScheduler.csproj
+++ b/src/scheduling/Proto.Scheduler.SimpleScheduler/Proto.Schedulers.SimpleScheduler.csproj
@@ -1,8 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk" ToolsVersion="15.0">
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netstandard2.1</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Proto.Actor" Version="0.9.0" />
+    <PackageReference Include="Proto.Actor" Version="0.9.1-alpha.0.71" />
   </ItemGroup>
 </Project>
