--- a/src/serialization/Proto.Serialization.Wire/Proto.Serialization.Wire.csproj
+++ b/src/serialization/Proto.Serialization.Wire/Proto.Serialization.Wire.csproj
@@ -1,9 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk" ToolsVersion="15.0">
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netstandard2.1</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Proto.Remote" Version="0.9.0" />
+    <PackageReference Include="Proto.Remote" Version="0.9.1-alpha.0.71" />
     <PackageReference Include="Wire" Version="0.8.2" />
   </ItemGroup>
 </Project>
